# tray

./: .clangd  .gitignore  CMakeLists.txt  README.md  TRay.code-workspace
apps/: CMakeLists.txt
apps/TRay/: CMakeLists.txt  main.cpp
apps/TRay-CLI/: CMakeLists.txt  main.cpp
apps/TRay-GUI/: CMakeLists.txt
citation-style-language/: china-national-standard-gb-t-7714-2015-numeric-custom.csl
include/: utility.h
include/accelerators/: LinearAccel.h  accelerators.h
include/cameras/: OrthographicCamera.h  PerspectiveCamera.h  PinholeCamera.h  cameras.h
include/core/: Camera.h  Film.h  Filter.h  Integrator.h  Light.h  Material.h  Memory.h  MemoryPool.h  Sampler.h  Scene.h  TRay.h  Texture.h  imageio.h  statistics.h  stringformat.h  stringprint.h  tray.h
include/core/geometry/: AnimateTransform.h  Bound.h  Interaction.h  Normal.h  Point.h  Quaternion.h  Ray.h  Shape.h  Transform.h  Vector.h  bound.h  geometry.h  point.h  precision.h  ray.h  transform.h  vector.h
include/core/math/: Matrix.h  RNG.h  SobolMatrices.h  lowdiscrepancy.h  sampling.h
include/core/primitives/: Aggregate.h  GeometricPrimitive.h  Primitive.h  TransformedPrimitive.h  primitives.h
include/core/reflection/: BSDF.h  BxDF.h  Fresnel.h  FresnelSpecular.h  Lambertian.h  OrenNayar.h
include/core/shape/: Sphere.h  shapes.h
include/core/shapes/: Shape.h  Sphere.h  shapes.h
include/core/spectrum/: CoefficientSpectrum.h  RGBSpectrum.h  spectrum.h
include/filters/: BoxFilter.h  NoFilter.h  filters.h
include/gui/: Shader.h  utility.h
include/integrators/: DirectIntegrator.h  PathIntegrator.h  WhittedIntegrator.h  integrators.h
include/lights/: DiffuseAreaLight.h  DistantLight.h  lights.h
include/loaders/: KeyVal.h  ObjLoader.h  SceneLoader.h  meshloading.h  sceneload.h
include/materials/: MatteMaterial.h  MirrorMaterial.h  PlasticMaterial.h  materials.h
include/samplers/: HaltonSampler.h  MaxMinDisSampler.h  RandomSampler.h  SobolSampler.h  StratifiedSampler.h  ZeroTwoSampler.h  samplers.h
include/shapes/: Sphere.h  TriangleMesh.h  shapes.h
include/textures/: BiLerpTexture.h  ConstantTexture.h  Grid3DTexture.h  LerpTexture.h  ScaleTexture.h  textures.h
others/: china-national-standard-gb-t-7714-2015-numeric-custom.csl
src/: CMakeLists.txt
src/accelerators/: LinearAccel.cpp
src/cameras/: PerspectiveCamera.cpp
src/core/: Camera.cpp  Film.cpp  Integrator.cpp  Light.cpp  Memory.cpp  MemoryPool.cpp  Sampler.cpp  Scene.cpp  Texture.cpp  statistics.cpp
src/core/geometry/: AnimateTransform.cpp  Bound.cpp  Interaction.cpp  Normal.cpp  Point.cpp  Quaternion.cpp  Ray.cpp  Transform.cpp  Vector.cpp  geometry.cpp  transform.cpp
src/core/math/: Matrix.cpp  SobolMatrices.cpp  lowdiscrepancy.cpp  sampling.cpp
src/core/primitives/: Aggregate.cpp  GeometricPrimitive.cpp  TransformedPrimitive.cpp
src/core/reflection/: BSDF.cpp  BxDF.cpp  Fresnel.cpp  FresnelSpecular.cpp  Lambertian.cpp  OrenNayar.cpp
src/core/shape/: Sphere.cpp
src/core/shapes/: Sphere.cpp
src/filters/: BoxFilter.cpp
src/gui/: Shader.cpp
src/integrators/: DirectIntegrator.cpp  PathIntegrator.cpp  WhittedIntegrator.cpp
src/lights/: DiffuseAreaLight.cpp  DistantLight.cpp
src/loaders/: MeshLoader.cpp  ObjLoader.cpp  SceneLoader.cpp  meshload.cpp  meshloading.cpp  sceneload.cpp
src/materials/: MatteMaterial.cpp  MirrorMaterial.cpp  PlasticMaterial.cpp
src/samplers/: HaltonSampler.cpp  MaxMinDisSampler.cpp  SobolSampler.cpp  StratifiedSampler.cpp  ZeroTwoSampler.cpp
src/shapes/: Sphere.cpp  TriangleMesh.cpp
