set(HEADER_DIR "${CMAKE_SOURCE_DIR}/include")
set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
set(EXTERN_DIR "${CMAKE_SOURCE_DIR}/extern")

add_library(tiny_obj_loader
  STATIC
  tiny_obj_loader.cpp
)

add_library(TRay_geometry
  STATIC
  ${SOURCE_DIR}/core/math/Matrix.cpp
  ${SOURCE_DIR}/core/geometry/AnimateTransform.cpp
  ${SOURCE_DIR}/core/geometry/Transform.cpp
  ${SOURCE_DIR}/core/geometry/Interaction.cpp
  ${SOURCE_DIR}/core/geometry/Ray.cpp
  ${SOURCE_DIR}/core/geometry/Bound.cpp
  ${SOURCE_DIR}/core/geometry/Quaternion.cpp
)
add_library(TRay_shape
  STATIC
  ${SOURCE_DIR}/core/geometry/Interaction.cpp
  ${SOURCE_DIR}/core/geometry/Ray.cpp
  ${SOURCE_DIR}/shapes/Sphere.cpp
)
add_library(TRay_primitive
  STATIC
  ${SOURCE_DIR}/core/primitives/GeometricPrimitive.cpp
  ${SOURCE_DIR}/core/primitives/TransformedPrimitive.cpp
  ${SOURCE_DIR}/core/primitives/Aggregate.cpp
  ${SOURCE_DIR}/accelerators/LinearAccel.cpp
)
add_library(TRay_camera
  STATIC
  ${SOURCE_DIR}/filters/BoxFilter.cpp
  ${SOURCE_DIR}/core/Camera.cpp
  ${SOURCE_DIR}/core/geometry/Bound.cpp
  ${SOURCE_DIR}/core/Film.cpp
  ${SOURCE_DIR}/cameras/PerspectiveCamera.cpp
)
add_library(TRay_sampler
  STATIC
  ${SOURCE_DIR}/core/Sampler.cpp
  ${SOURCE_DIR}/samplers/StratifiedSampler.cpp
)
add_library(TRay_material
  STATIC
  ${SOURCE_DIR}/core/math/sampling.cpp
  ${SOURCE_DIR}/core/reflection/BxDF.cpp
  ${SOURCE_DIR}/core/reflection/Fresnel.cpp
  ${SOURCE_DIR}/core/reflection/FresnelSpecular.cpp
  ${SOURCE_DIR}/core/reflection/Lambertian.cpp
  ${SOURCE_DIR}/core/reflection/BSDF.cpp
  ${SOURCE_DIR}/core/reflection/OrenNayar.cpp

  ${SOURCE_DIR}/materials/MatteMaterial.cpp
  ${SOURCE_DIR}/materials/PlasticMaterial.cpp
  ${SOURCE_DIR}/materials/MirrorMaterial.cpp
)
add_library(TRay_texture
  STATIC
  ${SOURCE_DIR}/core/Texture.cpp
)
add_library(TRay_light
  STATIC
  ${SOURCE_DIR}/core/Light.cpp
  ${SOURCE_DIR}/lights/DistantLight.cpp
  ${SOURCE_DIR}/lights/DiffuseAreaLight.cpp
)
add_library(TRay_scene
  STATIC
  ${SOURCE_DIR}/core/Scene.cpp
)
add_library(TRay_integrator
  STATIC
  ${SOURCE_DIR}/core/geometry/Bound.cpp
  ${SOURCE_DIR}/core/Integrator.cpp
  ${SOURCE_DIR}/integrators/WhittedIntegrator.cpp
)